removed .visible class due to instructions visibility function changing. Class no longer required.

--- a/styles.css
+++ b/styles.css
@@ -37,10 +37,6 @@ button {
 .hidden {
     display: none;
 }
-
-.visible {
-    display: block;
-}
   
 .cardContainer {
     width: 620px;
